- Polishing the style-v2

--- a/RockWeb/Styles/style-v2/components/_button-groups.scss
+++ b/RockWeb/Styles/style-v2/components/_button-groups.scss
@@ -45,7 +45,17 @@
   .btn-group + .btn-group {
     margin-left: -1px;
   }
+
+  .btn.btn-primary {
+    &:focus,
+    &:not(:disabled):not(.disabled):active:focus {
+      box-shadow: none;
+    }
+  }
+
 }
+
+
 // ============================ END BASE STYLE ============================
 
 
