--- a/RockWeb/Styles/Blocks/Store/Store.css
+++ b/RockWeb/Styles/Blocks/Store/Store.css
@@ -37,12 +37,13 @@
   margin-right: auto;
   margin-left: auto;
   cursor: pointer;
-  background-color: #fff;
-  border: 1px solid #ccc;
+  background-color: var(--color-interface-softest);
+  border: 1px solid var(--color-interface-soft);
 }
 
 .packagesummary .packagesummary-body {
   padding: 16px;
+  background-color: var(--color-interface-softest);
 }
 
 .packagesummary .packagesummary-body h2 {
@@ -67,8 +68,8 @@
   align-items: center;
   justify-content: space-between;
   padding: 6px 16px;
-  background-color: #fcfcfc;
-  border-top: 1px solid rgba(0, 0, 0, .125);
+  background-color: var(--color-interface-softest);
+  border-top: 1px solid var(--color-interface-soft);
 }
 
 /* Package Detail */
