--- a/RockWeb/Styles/style-v2/rock-components/_modal.scss
+++ b/RockWeb/Styles/style-v2/rock-components/_modal.scss
@@ -156,6 +156,20 @@ body.rock-modal {
 .modal-content {
   border:   none;
 }
+
+.modal.container.modal-content.rock-modal:has(.ant-select-dropdown) {
+    overflow: visible;
+
+    .modal-header {
+        border-top-left-radius: inherit;
+        border-top-right-radius: inherit;
+    }
+}
+
+.modal.container.modal-content.rock-modal form {
+    border-bottom-right-radius: inherit;
+    border-bottom-left-radius: inherit;
+}
 // ====================== END ALL MODALS ======================
 
 
