- Fix syntax error.

--- a/RockWeb/Styles/_rock-core.less
+++ b/RockWeb/Styles/_rock-core.less
@@ -1513,6 +1513,7 @@ div.aspNetDisabled {
 .table.table-borderless > tbody > tr > td,
 .table.table-borderless > tbody > tr > th {
   border: 0;
+}
 
 .modal.container.modal-content.rock-modal:has(.ant-select-dropdown) {
   overflow: visible;
