--- a/RockWeb/Styles/style-v2/_css-variable.scss
+++ b/RockWeb/Styles/style-v2/_css-variable.scss
@@ -11,27 +11,27 @@
   --color-interface-softest:   #FFFFFF;
 
   // APPLICATION COLORS 
-  --color-critical-soft:    #FEDEC8;
+  --color-critical-soft:    #EE7725;
   --color-critical-strong:  #EE7725;
   --color-critical-tint:    #EE7725;
   --color-critical-shade:   #EE7725;
   
-  --color-danger-soft:    #FFCCD1;
+  --color-danger-soft:    #D70015;
   --color-danger-strong:  #D70015;
   --color-danger-tint:    #D70015;
   --color-danger-shade:   #D70015;
   
-  --color-info-soft:        #D6EAFF;
+  --color-info-soft:        #007AFF;
   --color-info-strong:      #007AFF;
   --color-info-tint:        #007AFF;
   --color-info-shade:       #007AFF;
   
-  --color-success-soft:     #D7F4DE;
+  --color-success-soft:     #248A3D;
   --color-success-strong:   #248A3D;
   --color-success-tint:     #248A3D;
   --color-success-shade:    #248A3D;
   
-  --color-warning-soft:     #FFECD1;
+  --color-warning-soft:     #E58600;
   --color-warning-strong:   #E58600;
   --color-warning-tint:     #E58600;
   --color-warning-shade:    #E58600;
@@ -239,16 +239,13 @@
   --color-interface-softer:    #f1f1f8;
   --color-interface-softest:   #FFFFFF;
 
-  --color-critical-soft:    color-mix(in srgb, var(--color-critical-strong) 25%, #FFF var(--tint-white-percentage));
-
-  --color-danger-soft:      color-mix(in srgb, var(--color-danger-strong) 25%, #FFF var(--tint-white-percentage));
-
-  --color-info-soft:        color-mix(in srgb, var(--color-info-strong) 25%, #FFF var(--tint-white-percentage));
-
-  --color-success-soft:     color-mix(in srgb, var(--color-success-strong) 25%, #FFF var(--tint-white-percentage));
-
-  --color-warning-soft:     color-mix(in srgb, var(--color-warning-strong) 25%, #FFF var(--tint-white-percentage));
-
+  @supports (color: color-mix(in srgb, red 50%, white 50%)) {
+    --color-critical-soft:    color-mix(in srgb, var(--color-critical-strong) 25%, #FFF var(--tint-white-percentage));
+    --color-danger-soft:      color-mix(in srgb, var(--color-danger-strong) 25%, #FFF var(--tint-white-percentage));
+    --color-info-soft:        color-mix(in srgb, var(--color-info-strong) 25%, #FFF var(--tint-white-percentage));
+    --color-success-soft:     color-mix(in srgb, var(--color-success-strong) 25%, #FFF var(--tint-white-percentage));
+    --color-warning-soft:     color-mix(in srgb, var(--color-warning-strong) 25%, #FFF var(--tint-white-percentage));
+  }
 }
 
 [theme = "dark"] {
