--- a/RockWeb/Styles/rock-components/key-value.less
+++ b/RockWeb/Styles/rock-components/key-value.less
@@ -13,4 +13,12 @@
       align-items: center;
     }
   }
+
+  .control-wrapper {
+    width: 100%;
+  }
+
+  .form-control-group:not(.controls-row-full-width) {
+    max-width: 600px;
+  }
 }
