--- a/RockWeb/Styles/rock-components/value-list.less
+++ b/RockWeb/Styles/rock-components/value-list.less
@@ -7,4 +7,12 @@
     margin-bottom: 6px;
     margin-right: 0;
   }
+
+  .control-wrapper {
+    width: 100%;
+  }
+
+  .form-control-group:not(.controls-row-full-width) {
+      max-width: 600px;
+  }
 }
