--- a/RockWeb/Styles/Bootstrap/modals.less
+++ b/RockWeb/Styles/Bootstrap/modals.less
@@ -5,7 +5,7 @@
 // .modal-open      - body class for killing the scroll
 // .modal           - container to scroll within
 // .modal-dialog    - positioning shell for the actual modal
-// .modal-content   - actual modal w/ bg and corners and shit
+// .modal-content   - actual modal w/ bg and corners
 
 // Kill the scroll on the body
 .modal-open {
