--- a/RockWeb/Styles/style-v2/rock-components/_key-value.scss
+++ b/RockWeb/Styles/style-v2/rock-components/_key-value.scss
@@ -20,6 +20,12 @@
       align-items:  center;
     }
   }
+  .control-wrapper {
+    width: 100%;
+  }
+  .form-control-group:not(.controls-row-full-width) {
+    max-width: 600px;
+  }
 }
 // ====================== END BASE STYLE ======================
 
