--- a/RockWeb/Styles/style-v2/rock-components/_value-list.scss
+++ b/RockWeb/Styles/style-v2/rock-components/_value-list.scss
@@ -14,6 +14,14 @@
     margin-bottom: var(--spacing-xsmall);
     margin-right: 0;
   }
+  
+  .control-wrapper {
+    width: 100%;
+  }
+
+  .form-control-group:not(.controls-row-full-width) {
+      max-width: 600px;
+  }
 }
 // ====================== END BASE STYLE ======================
 
