- Fix Checkin Color.

--- a/RockWeb/Themes/NextGenCheckin/Styles/theme.css
+++ b/RockWeb/Themes/NextGenCheckin/Styles/theme.css
@@ -27757,7 +27757,7 @@ tbody .collapse.in {
 
 /* CSS Overrides Bottom Start */
 :root {
-    --color-primary: #008cd0;
+    --color-primary: #ee7725;
     --logo-image: url('/Assets/Images/rock-logo-gray.svg');
     --color-interface-strongest: #000000;
     --color-interface-stronger: #1C1C1E;
