--- a/RockWeb/Themes/RockV2/Styles/theme.scss
+++ b/RockWeb/Themes/RockV2/Styles/theme.scss
@@ -3,10 +3,10 @@
 @import "../../../Styles/style-v2/sass-variable";
 @import "../../../Styles/style-v2/core.css";
 
-// @import "../../../Styles/style-v2/icons/fontawesome-icon.css";
-// @import "../../../Styles/style-v2/icons/fontawesome-regular.css"; 
-// @import "../../../Styles/style-v2/icons/fontawesome-solid.css";
-// @import "../../../Styles/style-v2/icons/tabler-icon.css";
+@import "../../../Styles/style-v2/icons/fontawesome-icon.css";
+@import "../../../Styles/style-v2/icons/fontawesome-regular.css"; 
+@import "../../../Styles/style-v2/icons/fontawesome-solid.css";
+@import "../../../Styles/style-v2/icons/tabler-icon.css";
 
 
 @-ms-viewport {
