- Fix label and styling in public workspace block.

--- a/RockWeb/Styles/_blocks-lms.less
+++ b/RockWeb/Styles/_blocks-lms.less
@@ -343,6 +343,16 @@
 
   .activity-item-detail-container {
     width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .activity-item-time {
+      margin-top: var(--spacing-tiny);
+  }
+
+  .activity-label-container {
+      margin-top: var(--spacing-xsmall);
   }
 
   .activity-item-grade-container {
