--- a/RockWeb/Styles/style-v2/rock-components/_ant-select.scss
+++ b/RockWeb/Styles/style-v2/rock-components/_ant-select.scss
@@ -589,6 +589,7 @@
   font-size: var(--font-size-small);
   font-variant: initial;
   background-color: var(--color-interface-softest);
+  border: 1px solid var(--color-interface-soft);
   border-radius: 2px;
   outline: none;
   box-shadow: 0 3px 6px -4px rgba(0, 0, 0, 0.12), 0 6px 16px 0 rgba(0, 0, 0, 0.08), 0 9px 28px 8px rgba(0, 0, 0, 0.05);
